parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> ROBOT_R VARS var_list PROCS proc_def instruction_block
Rule 2     program -> ROBOT_R PROCS proc_def instruction_block
Rule 3     program -> ROBOT_R VARS instruction_block
Rule 4     program -> ROBOT_R instruction_block
Rule 5     program -> ROBOT_R PROCS
Rule 6     program -> ROBOT_R VARS
Rule 7     program -> ROBOT_R
Rule 8     program -> empty
Rule 9     var_list -> NAME var_list_tail
Rule 10    var_list -> NAME
Rule 11    var_list_tail -> COMA NAME var_list_tail PCOMA
Rule 12    var_list_tail -> COMA NAME PCOMA
Rule 13    proc_def -> NAME CORCHI parameters CORCHD instruction_block
Rule 14    proc_def -> NAME CORCHI parameters CORCHD instruction_block proc_def
Rule 15    parameters -> LINEA NAME parameters_tail LINEA
Rule 16    parameters -> LINEA NAME LINEA
Rule 17    parameters_tail -> COMA NAME parameters_tail
Rule 18    parameters_tail -> COMA NAME
Rule 19    instruction_block -> CORCHI instructions CORCHD
Rule 20    instruction_block -> CORCHI CORCHD
Rule 21    instructions -> instruction instructions
Rule 22    instructions -> instruction
Rule 23    instruction -> assignTo
Rule 24    instruction -> goto
Rule 25    instruction -> move
Rule 26    instruction -> turn
Rule 27    instruction -> face
Rule 28    instruction -> put
Rule 29    instruction -> pick
Rule 30    instruction -> moveToThe
Rule 31    instruction -> moveInDir
Rule 32    instruction -> jumpToThe
Rule 33    instruction -> jumpInDir
Rule 34    instruction -> NOP
Rule 35    instruction -> procedure_call
Rule 36    instruction -> control_structure
Rule 37    assignTo -> ASSINGTO PCOMA NAME COMA INT
Rule 38    goto -> GOTO DPUNTOS INT COMA INT
Rule 39    move -> MOVE DPUNTOS INT
Rule 40    turn -> TURN DPUNTOS LEFT
Rule 41    turn -> TURN DPUNTOS RIGHT
Rule 42    turn -> TURN DPUNTOS AROUND
Rule 43    face -> FACE DPUNTOS NORTH
Rule 44    face -> FACE DPUNTOS SOUTH
Rule 45    face -> FACE DPUNTOS EAST
Rule 46    face -> FACE DPUNTOS WEST
Rule 47    put -> PUT DPUNTOS INT COMA BALLOONS
Rule 48    put -> PUT DPUNTOS INT COMA CHIPS
Rule 49    pick -> PICK DPUNTOS INT COMA BALLOONS
Rule 50    pick -> PICK DPUNTOS INT COMA CHIPS
Rule 51    moveToThe -> MOVETOTHE DPUNTOS INT COMA FRONT
Rule 52    moveToThe -> MOVETOTHE DPUNTOS INT COMA LEFT
Rule 53    moveToThe -> MOVETOTHE DPUNTOS INT COMA RIGHT
Rule 54    moveToThe -> MOVETOTHE DPUNTOS INT COMA BACK
Rule 55    moveInDir -> MOVEINDIR DPUNTOS INT COMA NORTH
Rule 56    moveInDir -> MOVEINDIR DPUNTOS INT COMA SOUTH
Rule 57    moveInDir -> MOVEINDIR DPUNTOS INT COMA EAST
Rule 58    moveInDir -> MOVEINDIR DPUNTOS INT COMA WEST
Rule 59    jumpToThe -> JUMPTOTHE DPUNTOS INT COMA FRONT
Rule 60    jumpToThe -> JUMPTOTHE DPUNTOS INT COMA LEFT
Rule 61    jumpToThe -> JUMPTOTHE DPUNTOS INT COMA RIGHT
Rule 62    jumpToThe -> JUMPTOTHE DPUNTOS INT COMA BACK
Rule 63    jumpInDir -> JUMPINDIR DPUNTOS INT COMA NORTH
Rule 64    jumpInDir -> JUMPINDIR DPUNTOS INT COMA SOUTH
Rule 65    jumpInDir -> JUMPINDIR DPUNTOS INT COMA EAST
Rule 66    jumpInDir -> JUMPINDIR DPUNTOS INT COMA WEST
Rule 67    instruction -> NAME DPUNTOS args
Rule 68    instruction -> IF DPUNTOS condition THEN DPUNTOS instructions ELSE DPUNTOS instructions
Rule 69    instruction -> WHILE DPUNTOS condition DO DPUNTOS instructions
Rule 70    instruction -> REPEAT DPUNTOS args DPUNTOS instructions
Rule 71    condition -> FACING NAME
Rule 72    condition -> CANPUT args COMA NAME
Rule 73    condition -> CANPICK args COMA NAME
Rule 74    condition -> CANMOVEINDIR args COMA NAME
Rule 75    condition -> CANJUMPINDIR args COMA NAME
Rule 76    condition -> CANMOVETOTHE args COMA NAME
Rule 77    condition -> CANJUMPTOTHE args COMA NAME
Rule 78    condition -> NOT condition
Rule 79    args -> arg
Rule 80    args -> arg COMA args
Rule 81    arg -> NAME
Rule 82    arg -> INT
Rule 83    empty -> <empty>

Terminals, with rules where they appear

AROUND               : 42
ASSINGTO             : 37
BACK                 : 54 62
BALLOONS             : 47 49
CANJUMPINDIR         : 75
CANJUMPTOTHE         : 77
CANMOVEINDIR         : 74
CANMOVETOTHE         : 76
CANPICK              : 73
CANPUT               : 72
CHIPS                : 48 50
COMA                 : 11 12 17 18 37 38 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 72 73 74 75 76 77 80
CORCHD               : 13 14 19 20
CORCHI               : 13 14 19 20
DO                   : 69
DPUNTOS              : 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 68 68 69 69 70 70
EAST                 : 45 57 65
ELSE                 : 68
FACE                 : 43 44 45 46
FACING               : 71
FRONT                : 51 59
GOTO                 : 38
IF                   : 68
INT                  : 37 38 38 39 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 82
JUMPINDIR            : 63 64 65 66
JUMPTOTHE            : 59 60 61 62
LEFT                 : 40 52 60
LINEA                : 15 15 16 16
MOVE                 : 39
MOVEINDIR            : 55 56 57 58
MOVETOTHE            : 51 52 53 54
NAME                 : 9 10 11 12 13 14 15 16 17 18 37 67 71 72 73 74 75 76 77 81
NOP                  : 34
NORTH                : 43 55 63
NOT                  : 78
PCOMA                : 11 12 37
PICK                 : 49 50
PROCS                : 1 2 5
PUT                  : 47 48
REPEAT               : 70
RIGHT                : 41 53 61
ROBOT_R              : 1 2 3 4 5 6 7
SOUTH                : 44 56 64
THEN                 : 68
TURN                 : 40 41 42
VARS                 : 1 3 6
WEST                 : 46 58 66
WHILE                : 69
control_structure    : 36
error                : 
procedure_call       : 35

Nonterminals, with rules where they appear

arg                  : 79 80
args                 : 67 70 72 73 74 75 76 77 80
assignTo             : 23
condition            : 68 69 78
empty                : 8
face                 : 27
goto                 : 24
instruction          : 21 22
instruction_block    : 1 2 3 4 13 14
instructions         : 19 21 68 68 69 70
jumpInDir            : 33
jumpToThe            : 32
move                 : 25
moveInDir            : 31
moveToThe            : 30
parameters           : 13 14
parameters_tail      : 15 17
pick                 : 29
proc_def             : 1 2 14
program              : 0
put                  : 28
turn                 : 26
var_list             : 1
var_list_tail        : 9 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . ROBOT_R VARS var_list PROCS proc_def instruction_block
    (2) program -> . ROBOT_R PROCS proc_def instruction_block
    (3) program -> . ROBOT_R VARS instruction_block
    (4) program -> . ROBOT_R instruction_block
    (5) program -> . ROBOT_R PROCS
    (6) program -> . ROBOT_R VARS
    (7) program -> . ROBOT_R
    (8) program -> . empty
    (83) empty -> .

    ROBOT_R         shift and go to state 2
    $end            reduce using rule 83 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> ROBOT_R . VARS var_list PROCS proc_def instruction_block
    (2) program -> ROBOT_R . PROCS proc_def instruction_block
    (3) program -> ROBOT_R . VARS instruction_block
    (4) program -> ROBOT_R . instruction_block
    (5) program -> ROBOT_R . PROCS
    (6) program -> ROBOT_R . VARS
    (7) program -> ROBOT_R .
    (19) instruction_block -> . CORCHI instructions CORCHD
    (20) instruction_block -> . CORCHI CORCHD

    VARS            shift and go to state 4
    PROCS           shift and go to state 5
    $end            reduce using rule 7 (program -> ROBOT_R .)
    CORCHI          shift and go to state 7

    instruction_block              shift and go to state 6

state 3

    (8) program -> empty .

    $end            reduce using rule 8 (program -> empty .)


state 4

    (1) program -> ROBOT_R VARS . var_list PROCS proc_def instruction_block
    (3) program -> ROBOT_R VARS . instruction_block
    (6) program -> ROBOT_R VARS .
    (9) var_list -> . NAME var_list_tail
    (10) var_list -> . NAME
    (19) instruction_block -> . CORCHI instructions CORCHD
    (20) instruction_block -> . CORCHI CORCHD

    $end            reduce using rule 6 (program -> ROBOT_R VARS .)
    NAME            shift and go to state 10
    CORCHI          shift and go to state 7

    var_list                       shift and go to state 8
    instruction_block              shift and go to state 9

state 5

    (2) program -> ROBOT_R PROCS . proc_def instruction_block
    (5) program -> ROBOT_R PROCS .
    (13) proc_def -> . NAME CORCHI parameters CORCHD instruction_block
    (14) proc_def -> . NAME CORCHI parameters CORCHD instruction_block proc_def

    $end            reduce using rule 5 (program -> ROBOT_R PROCS .)
    NAME            shift and go to state 12

    proc_def                       shift and go to state 11

state 6

    (4) program -> ROBOT_R instruction_block .

    $end            reduce using rule 4 (program -> ROBOT_R instruction_block .)


state 7

    (19) instruction_block -> CORCHI . instructions CORCHD
    (20) instruction_block -> CORCHI . CORCHD
    (21) instructions -> . instruction instructions
    (22) instructions -> . instruction
    (23) instruction -> . assignTo
    (24) instruction -> . goto
    (25) instruction -> . move
    (26) instruction -> . turn
    (27) instruction -> . face
    (28) instruction -> . put
    (29) instruction -> . pick
    (30) instruction -> . moveToThe
    (31) instruction -> . moveInDir
    (32) instruction -> . jumpToThe
    (33) instruction -> . jumpInDir
    (34) instruction -> . NOP
    (35) instruction -> . procedure_call
    (36) instruction -> . control_structure
    (67) instruction -> . NAME DPUNTOS args
    (68) instruction -> . IF DPUNTOS condition THEN DPUNTOS instructions ELSE DPUNTOS instructions
    (69) instruction -> . WHILE DPUNTOS condition DO DPUNTOS instructions
    (70) instruction -> . REPEAT DPUNTOS args DPUNTOS instructions
    (37) assignTo -> . ASSINGTO PCOMA NAME COMA INT
    (38) goto -> . GOTO DPUNTOS INT COMA INT
    (39) move -> . MOVE DPUNTOS INT
    (40) turn -> . TURN DPUNTOS LEFT
    (41) turn -> . TURN DPUNTOS RIGHT
    (42) turn -> . TURN DPUNTOS AROUND
    (43) face -> . FACE DPUNTOS NORTH
    (44) face -> . FACE DPUNTOS SOUTH
    (45) face -> . FACE DPUNTOS EAST
    (46) face -> . FACE DPUNTOS WEST
    (47) put -> . PUT DPUNTOS INT COMA BALLOONS
    (48) put -> . PUT DPUNTOS INT COMA CHIPS
    (49) pick -> . PICK DPUNTOS INT COMA BALLOONS
    (50) pick -> . PICK DPUNTOS INT COMA CHIPS
    (51) moveToThe -> . MOVETOTHE DPUNTOS INT COMA FRONT
    (52) moveToThe -> . MOVETOTHE DPUNTOS INT COMA LEFT
    (53) moveToThe -> . MOVETOTHE DPUNTOS INT COMA RIGHT
    (54) moveToThe -> . MOVETOTHE DPUNTOS INT COMA BACK
    (55) moveInDir -> . MOVEINDIR DPUNTOS INT COMA NORTH
    (56) moveInDir -> . MOVEINDIR DPUNTOS INT COMA SOUTH
    (57) moveInDir -> . MOVEINDIR DPUNTOS INT COMA EAST
    (58) moveInDir -> . MOVEINDIR DPUNTOS INT COMA WEST
    (59) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA FRONT
    (60) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA LEFT
    (61) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA RIGHT
    (62) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA BACK
    (63) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA NORTH
    (64) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA SOUTH
    (65) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA EAST
    (66) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA WEST

    CORCHD          shift and go to state 14
    NOP             shift and go to state 27
    procedure_call  shift and go to state 28
    control_structure shift and go to state 29
    NAME            shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    REPEAT          shift and go to state 33
    ASSINGTO        shift and go to state 34
    GOTO            shift and go to state 35
    MOVE            shift and go to state 36
    TURN            shift and go to state 37
    FACE            shift and go to state 38
    PUT             shift and go to state 39
    PICK            shift and go to state 40
    MOVETOTHE       shift and go to state 41
    MOVEINDIR       shift and go to state 42
    JUMPTOTHE       shift and go to state 43
    JUMPINDIR       shift and go to state 44

    instructions                   shift and go to state 13
    instruction                    shift and go to state 15
    assignTo                       shift and go to state 16
    goto                           shift and go to state 17
    move                           shift and go to state 18
    turn                           shift and go to state 19
    face                           shift and go to state 20
    put                            shift and go to state 21
    pick                           shift and go to state 22
    moveToThe                      shift and go to state 23
    moveInDir                      shift and go to state 24
    jumpToThe                      shift and go to state 25
    jumpInDir                      shift and go to state 26

state 8

    (1) program -> ROBOT_R VARS var_list . PROCS proc_def instruction_block

    PROCS           shift and go to state 45


state 9

    (3) program -> ROBOT_R VARS instruction_block .

    $end            reduce using rule 3 (program -> ROBOT_R VARS instruction_block .)


state 10

    (9) var_list -> NAME . var_list_tail
    (10) var_list -> NAME .
    (11) var_list_tail -> . COMA NAME var_list_tail PCOMA
    (12) var_list_tail -> . COMA NAME PCOMA

    PROCS           reduce using rule 10 (var_list -> NAME .)
    COMA            shift and go to state 47

    var_list_tail                  shift and go to state 46

state 11

    (2) program -> ROBOT_R PROCS proc_def . instruction_block
    (19) instruction_block -> . CORCHI instructions CORCHD
    (20) instruction_block -> . CORCHI CORCHD

    CORCHI          shift and go to state 7

    instruction_block              shift and go to state 48

state 12

    (13) proc_def -> NAME . CORCHI parameters CORCHD instruction_block
    (14) proc_def -> NAME . CORCHI parameters CORCHD instruction_block proc_def

    CORCHI          shift and go to state 49


state 13

    (19) instruction_block -> CORCHI instructions . CORCHD

    CORCHD          shift and go to state 50


state 14

    (20) instruction_block -> CORCHI CORCHD .

    $end            reduce using rule 20 (instruction_block -> CORCHI CORCHD .)
    NAME            reduce using rule 20 (instruction_block -> CORCHI CORCHD .)
    CORCHI          reduce using rule 20 (instruction_block -> CORCHI CORCHD .)


state 15

    (21) instructions -> instruction . instructions
    (22) instructions -> instruction .
    (21) instructions -> . instruction instructions
    (22) instructions -> . instruction
    (23) instruction -> . assignTo
    (24) instruction -> . goto
    (25) instruction -> . move
    (26) instruction -> . turn
    (27) instruction -> . face
    (28) instruction -> . put
    (29) instruction -> . pick
    (30) instruction -> . moveToThe
    (31) instruction -> . moveInDir
    (32) instruction -> . jumpToThe
    (33) instruction -> . jumpInDir
    (34) instruction -> . NOP
    (35) instruction -> . procedure_call
    (36) instruction -> . control_structure
    (67) instruction -> . NAME DPUNTOS args
    (68) instruction -> . IF DPUNTOS condition THEN DPUNTOS instructions ELSE DPUNTOS instructions
    (69) instruction -> . WHILE DPUNTOS condition DO DPUNTOS instructions
    (70) instruction -> . REPEAT DPUNTOS args DPUNTOS instructions
    (37) assignTo -> . ASSINGTO PCOMA NAME COMA INT
    (38) goto -> . GOTO DPUNTOS INT COMA INT
    (39) move -> . MOVE DPUNTOS INT
    (40) turn -> . TURN DPUNTOS LEFT
    (41) turn -> . TURN DPUNTOS RIGHT
    (42) turn -> . TURN DPUNTOS AROUND
    (43) face -> . FACE DPUNTOS NORTH
    (44) face -> . FACE DPUNTOS SOUTH
    (45) face -> . FACE DPUNTOS EAST
    (46) face -> . FACE DPUNTOS WEST
    (47) put -> . PUT DPUNTOS INT COMA BALLOONS
    (48) put -> . PUT DPUNTOS INT COMA CHIPS
    (49) pick -> . PICK DPUNTOS INT COMA BALLOONS
    (50) pick -> . PICK DPUNTOS INT COMA CHIPS
    (51) moveToThe -> . MOVETOTHE DPUNTOS INT COMA FRONT
    (52) moveToThe -> . MOVETOTHE DPUNTOS INT COMA LEFT
    (53) moveToThe -> . MOVETOTHE DPUNTOS INT COMA RIGHT
    (54) moveToThe -> . MOVETOTHE DPUNTOS INT COMA BACK
    (55) moveInDir -> . MOVEINDIR DPUNTOS INT COMA NORTH
    (56) moveInDir -> . MOVEINDIR DPUNTOS INT COMA SOUTH
    (57) moveInDir -> . MOVEINDIR DPUNTOS INT COMA EAST
    (58) moveInDir -> . MOVEINDIR DPUNTOS INT COMA WEST
    (59) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA FRONT
    (60) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA LEFT
    (61) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA RIGHT
    (62) jumpToThe -> . JUMPTOTHE DPUNTOS INT COMA BACK
    (63) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA NORTH
    (64) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA SOUTH
    (65) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA EAST
    (66) jumpInDir -> . JUMPINDIR DPUNTOS INT COMA WEST

  ! shift/reduce conflict for NOP resolved as shift
  ! shift/reduce conflict for procedure_call resolved as shift
  ! shift/reduce conflict for control_structure resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for REPEAT resolved as shift
  ! shift/reduce conflict for ASSINGTO resolved as shift
  ! shift/reduce conflict for GOTO resolved as shift
  ! shift/reduce conflict for MOVE resolved as shift
  ! shift/reduce conflict for TURN resolved as shift
  ! shift/reduce conflict for FACE resolved as shift
  ! shift/reduce conflict for PUT resolved as shift
  ! shift/reduce conflict for PICK resolved as shift
  ! shift/reduce conflict for MOVETOTHE resolved as shift
  ! shift/reduce conflict for MOVEINDIR resolved as shift
  ! shift/reduce conflict for JUMPTOTHE resolved as shift
  ! shift/reduce conflict for JUMPINDIR resolved as shift
    CORCHD          reduce using rule 22 (instructions -> instruction .)
    ELSE            reduce using rule 22 (instructions -> instruction .)
    NOP             shift and go to state 27
    procedure_call  shift and go to state 28
    control_structure shift and go to state 29
    NAME            shift and go to state 30
    IF              shift and go to state 31
    WHILE           shift and go to state 32
    REPEAT          shift and go to state 33
    ASSINGTO        shift and go to state 34
    GOTO            shift and go to state 35
    MOVE            shift and go to state 36
    TURN            shift and go to state 37
    FACE            shift and go to state 38
    PUT             shift and go to state 39
    PICK            shift and go to state 40
    MOVETOTHE       shift and go to state 41
    MOVEINDIR       shift and go to state 42
    JUMPTOTHE       shift and go to state 43
    JUMPINDIR       shift and go to state 44

  ! NOP             [ reduce using rule 22 (instructions -> instruction .) ]
  ! procedure_call  [ reduce using rule 22 (instructions -> instruction .) ]
  ! control_structure [ reduce using rule 22 (instructions -> instruction .) ]
  ! NAME            [ reduce using rule 22 (instructions -> instruction .) ]
  ! IF              [ reduce using rule 22 (instructions -> instruction .) ]
  ! WHILE           [ reduce using rule 22 (instructions -> instruction .) ]
  ! REPEAT          [ reduce using rule 22 (instructions -> instruction .) ]
  ! ASSINGTO        [ reduce using rule 22 (instructions -> instruction .) ]
  ! GOTO            [ reduce using rule 22 (instructions -> instruction .) ]
  ! MOVE            [ reduce using rule 22 (instructions -> instruction .) ]
  ! TURN            [ reduce using rule 22 (instructions -> instruction .) ]
  ! FACE            [ reduce using rule 22 (instructions -> instruction .) ]
  ! PUT             [ reduce using rule 22 (instructions -> instruction .) ]
  ! PICK            [ reduce using rule 22 (instructions -> instruction .) ]
  ! MOVETOTHE       [ reduce using rule 22 (instructions -> instruction .) ]
  ! MOVEINDIR       [ reduce using rule 22 (instructions -> instruction .) ]
  ! JUMPTOTHE       [ reduce using rule 22 (instructions -> instruction .) ]
  ! JUMPINDIR       [ reduce using rule 22 (instructions -> instruction .) ]

    instruction                    shift and go to state 15
    instructions                   shift and go to state 51
    assignTo                       shift and go to state 16
    goto                           shift and go to state 17
    move                           shift and go to state 18
    turn                           shift and go to state 19
    face                           shift and go to state 20
    put                            shift and go to state 21
    pick                           shift and go to state 22
    moveToThe                      shift and go to state 23
    moveInDir                      shift and go to state 24
    jumpToThe                      shift and go to state 25
    jumpInDir                      shift and go to state 26

state 16

    (23) instruction -> assignTo .

    NOP             reduce using rule 23 (instruction -> assignTo .)
    procedure_call  reduce using rule 23 (instruction -> assignTo .)
    control_structure reduce using rule 23 (instruction -> assignTo .)
    NAME            reduce using rule 23 (instruction -> assignTo .)
    IF              reduce using rule 23 (instruction -> assignTo .)
    WHILE           reduce using rule 23 (instruction -> assignTo .)
    REPEAT          reduce using rule 23 (instruction -> assignTo .)
    ASSINGTO        reduce using rule 23 (instruction -> assignTo .)
    GOTO            reduce using rule 23 (instruction -> assignTo .)
    MOVE            reduce using rule 23 (instruction -> assignTo .)
    TURN            reduce using rule 23 (instruction -> assignTo .)
    FACE            reduce using rule 23 (instruction -> assignTo .)
    PUT             reduce using rule 23 (instruction -> assignTo .)
    PICK            reduce using rule 23 (instruction -> assignTo .)
    MOVETOTHE       reduce using rule 23 (instruction -> assignTo .)
    MOVEINDIR       reduce using rule 23 (instruction -> assignTo .)
    JUMPTOTHE       reduce using rule 23 (instruction -> assignTo .)
    JUMPINDIR       reduce using rule 23 (instruction -> assignTo .)
    CORCHD          reduce using rule 23 (instruction -> assignTo .)
    ELSE            reduce using rule 23 (instruction -> assignTo .)


state 17

    (24) instruction -> goto .

    NOP             reduce using rule 24 (instruction -> goto .)
    procedure_call  reduce using rule 24 (instruction -> goto .)
    control_structure reduce using rule 24 (instruction -> goto .)
    NAME            reduce using rule 24 (instruction -> goto .)
    IF              reduce using rule 24 (instruction -> goto .)
    WHILE           reduce using rule 24 (instruction -> goto .)
    REPEAT          reduce using rule 24 (instruction -> goto .)
    ASSINGTO        reduce using rule 24 (instruction -> goto .)
    GOTO            reduce using rule 24 (instruction -> goto .)
    MOVE            reduce using rule 24 (instruction -> goto .)
    TURN            reduce using rule 24 (instruction -> goto .)
    FACE            reduce using rule 24 (instruction -> goto .)
    PUT             reduce using rule 24 (instruction -> goto .)
    PICK            reduce using rule 24 (instruction -> goto .)
    MOVETOTHE       reduce using rule 24 (instruction -> goto .)
    MOVEINDIR       reduce using rule 24 (instruction -> goto .)
    JUMPTOTHE       reduce using rule 24 (instruction -> goto .)
    JUMPINDIR       reduce using rule 24 (instruction -> goto .)
    CORCHD          reduce using rule 24 (instruction -> goto .)
    ELSE            reduce using rule 24 (instruction -> goto .)


state 18

    (25) instruction -> move .
